= Tropo Release History

== Version 0.1.5

- First public release

== Version 0.1.6

- Added the appropriate ActiveSupport dependency for 'instance_exec' for Ruby 1.8.6 support.