@@ -1,6 +1,7 @@
 $: << File.expand_path(File.dirname(__FILE__))
 require 'uri'
 require 'json'
+require 'hashie'
 require 'time'
 require 'tropo-webapi-ruby/tropo-webapi-ruby-helpers'
 require 'tropo-webapi-ruby/tropo-webapi-ruby'
